@@ -1,238 +1,212 @@
-# VIDCRYPT-V8
+# VIDCRYPT-V8 — Build Reference
 
 [![License: GPL v3](https://img.shields.io/badge/License-GPLv3-blue.svg)](LICENSE)
 
-VIDCRYPT-V8 is a high-performance file-to-video encoding system designed to preserve arbitrary files through aggressive video compression.
+File-to-video encoding: C engine + optional Java JNI tile decoder + optional CUDA GPU.
 
-Instead of storing data in traditional containers, VIDCRYPT converts files into grids of black-and-white tiles embedded inside video frames. Each frame contains payload data, synchronization markers, calibration metadata, and error-correction information, allowing files to survive transcoding, resizing, and heavy compression on platforms such as YouTube, Instagram, Discord, and other video-sharing services.
+## Architecture
 
----
+```
+┌─────────────────────────────────────────────────┐
+│  C engine (primary)                             │
+│  ├─ encoder.c/h      file → RS → frames → pipe  │
+│  ├─ decoder.c/h      pipe → frames → RS → file  │
+│  ├─ reedsolomon.c/h  RS(255,255-ecc) ECC        │
+│  ├─ simd_decode.c/h  C SIMD tile decode         │
+│  └─ threadpool.c/h   worker pool, SPSC queue    │
+├─────────────────────────────────────────────────┤
+│  Java JNI (optional, USE_JNI_TILES=ON)          │
+│  └─ TileDecoder.java  3-4× faster tile decode   │
+│     Called from simd_decode.c via JNI            │
+├─────────────────────────────────────────────────┤
+│  CUDA GPU (optional, USE_CUDA=ON)               │
+│  └─ gpu_kernels.cu   extract_bits, calibration  │
+└─────────────────────────────────────────────────┘
+```
 
-## Features
+## File Map
 
-* File ↔ Video conversion
-* Designed for compression-heavy platforms
-* Reed-Solomon error correction
-* SHA-256 integrity verification
-* Automatic calibration and synchronization recovery
-* Multi-threaded encoding and decoding
-* **CUDA GPU acceleration** — 2378+ FPS decode (2.85× over CPU), with `h264_cuvid` hardware decode + CUDA tile extraction
-* **Direct libavcodec C API** — eliminates ffmpeg CLI pipe overhead for GPU path
-* **Async quad-buffered pipeline** — CPU frame decode overlaps with GPU upload + kernel + copyback
-* **Cross-platform** — Windows, macOS, Linux (ARM64 scalar fallback on Apple Silicon)
-* SIMD-accelerated calibration reader (AVX2, SSE4.2 on x86-64)
+### C Source (`src/`)
 
----
+| File | Role | Depends On | Lines |
+|---|---|---|---|
+| `backend.c/h` | Backend mode selection (cpu/gpu/auto) | — | ~35 |
+| `bitstream.c/h` | MSB-first bit pack/unpack, popcount | — | ~100 |
+| `calibration.c/h` | CalParams, cal bar R/W, v1/v2 parse, CRC guard | `crc16.h` | ~300 |
+| `crc16.c/h` | CRC-16-CCITT (poly 0x1021, init 0xFFFF) | — | ~20 |
+| `decoder.c/h` | Decode orchestrator: frame→tiles→RS→SHA-256→file | `calibration.h`, `framedecode.h`, `reedsolomon.h`, `sha256.h`, `threadpool.h`, `profiling.h`, `logutil.h`, `backend.h`, `libav_decoder.h` (GPU), `ffmpeg_pipe.h` (CPU) | ~870 |
+| `encoder.c/h` | Encode orchestrator: file→RS→frames→FFmpeg pipe | `bitstream.h`, `reedsolomon.h`, `simd_decode.h`, `threadpool.h`, `ffmpeg_pipe.h`, `sha256.h`, `profiling.h` | ~465 |
+| `ffmpeg_hwdecoder.c/h` | NVDEC direct C API (**obsolete** — use libav_decoder.c) | CUDA, FFmpeg | ~700 |
+| `ffmpeg_pipe.c/h` | FFmpeg CLI pipe reader (CPU path), pipes to ffmpeg/ffprobe | FFmpeg in PATH | ~470 |
+| `framegen.c/h` | PrecomputedFrame: cal bar + sync row + corner markers | `calibration.h`, `simd_decode.h` | ~75 |
+| `framedecode.c/h` | DecodeGeometry, sync check, corner offset detection | `calibration.h`, `simd_decode.h` | ~180 |
+| `gpu_backend.c/h` | CUDA context, stream, async pipeline management | CUDA, `gpu_kernels.cu`, `gpu_presets.h`, `decoder.h` | ~750 |
+| `gpu_kernels.cu/h` | CUDA kernels: `extract_bits`, `frame_upload`, `calibration_read` | CUDA 12.x | ~450 |
+| `gpu_nvenc.c/h` | NVENC hardware encoder (**stub**) | NVIDIA Video Codec SDK | ~800 |
+| `gpu_presets.c/h` | Per-arch GPU presets (sm_61..sm_120), auto-detect | CUDA | ~200 |
+| `libav_decoder.c/h` | Direct libavcodec C API reader (GPU h264_cuvid path) | FFmpeg libs | ~600 |
+| `logutil.c/h` | Structured logging to `log/` directory | — | ~350 |
+| `profiling.c/h` | Per-stage timing instrumentation | — | ~200 |
+| `pthread.h` | POSIX threads compat shim (Windows) | — | ~50 |
+| `reedsolomon.c/h` | RS(n=255,k=255-ecc): LFSR encode, B-M, Chien, Forney decode | — | ~260 |
+| `sha256.c/h` | SHA-256 (file + data) | — | ~30 |
+| `simd_decode.c/h` | Tile thresholding (branchless block8/16), cal SSE2/AVX2 reader | `calibration.h` | ~530 |
+| `threadpool.c/h` | Thread pool, ordered queue, lock-free SPSC queue | pthread | ~280 |
+| `tile_decode_jni.c/h` | **JNI bridge**: loads JVM, calls `JniTileDecoder.tileDecodeGrid` | JVM, `simd_decode.h` (fallback) | ~130 |
 
-## How It Works
+### Entry Points
 
-1. Files are converted into binary payloads.
-2. Payload bits are mapped into visual tile grids.
-3. Calibration and synchronization data are embedded into every frame.
-4. Frames are assembled into a video stream.
-5. The video can be uploaded, shared, compressed, or transcoded.
-6. The decoder reconstructs the original file and verifies integrity using SHA-256.
+| File | Binary | Role |
+|---|---|---|
+| `main_encoder.c` | `vidcrypt-encoder` | CLI: file → video |
+| `main_decoder.c` | `vidcrypt-decoder` | CLI: video → file |
 
----
+### Java Module (`vidcrypt-java/`)
 
-## Performance
+| File | Role | Used by |
+|---|---|---|
+| `frame/JniTileDecoder.java` | **JNI entry point** — wraps `TileDecoder.decodeGrid` | C via `tile_decode_jni.c` |
+| `frame/TileDecoder.java` | Branchless tile decode, 3-4× faster than C SIMD | `JniTileDecoder.java` |
+| `frame/DecodeGeometry.java` | Frame tile geometry | `TileDecoder.java` |
+| `frame/FrameGenerator.java` | Frame generation (standalone, not used by C) | — |
+| `calibration/CalParams.java` | Calibration builder/parser matching C `calibration.h` | `TileDecoder.java`, `FrameGenerator.java` |
+| `bitstream/BitStream.java` | MSB-first bit packing (standalone, not used by C) | — |
+| `hash/Crc16.java` | CRC-16-CCITT matching C `crc16.c` | `CalParams.java` |
+| `hash/Sha256.java` | SHA-256 via `java.security.MessageDigest` | — |
+| `concurrent/VidcryptExecutors.java` | Virtual-thread pool, ordered queue, SPSC (standalone) | — |
 
-Measured on **Ryzen 7 7700X (8C/16T)** + **NVIDIA RTX 5070 (Blackwell)**, 100 MB payload, 1920×1080, block size 8, RS(255,223,32):
+### Tests
 
-| Codec | Encode | CPU Decode | GPU Decode | GPU Decoder | Output Size |
-|-------|--------|-----------|-----------|-------------|-------------|
-| **FFV1** (lossless) | 51s / 803 FPS | 53s / 771 FPS | **18s / 2297 FPS** | sw ffv1 + CUDA tiles | 839 MB |
-| **H.264** (CRF 10 ultrafast) | 80s / 513 FPS | 64s / 646 FPS | **36s / 1127 FPS** | **h264_cuvid (NVDEC)** | 2.4 GB |
+| File | Framework | Tests |
+|---|---|---|
+| `tests/test_crc16.c` | CTest | CRC-16 known vectors |
+| `tests/test_bitstream.c` | CTest | Bit pack round-trip |
+| `tests/test_reedsolomon.c` | CTest | RS encode/decode identity, error correction |
+| `tests/test_decode.c` | CTest | Integration decode |
+| `vidcrypt-java/tests/test_reedsolomon.py` | pytest | RS(255,223,32): encode/decode, GF(256) tables, 1-17 errors |
+| `vidcrypt-java/tests/test_bitstream.py` | pytest | Bits↔bytes round-trip, word packing |
+| `vidcrypt-java/tests/test_crc16.py` | pytest | CRC-16-CCITT known vectors |
+| `vidcrypt-java/tests/test_calibration.py` | pytest | CalParams build/parse, dot R/W, noise resilience |
+| `vidcrypt-java/tests/conftest.py` | pytest | Shared fixtures |
 
-GPU decode achieves **3.0× speedup** (FFV1) to **3.2×** (H.264 NVDEC) over CPU by:
-1. **Direct libavcodec C API** — eliminates ffmpeg CLI pipe overhead
-2. **Quad-buffered async pipeline** — 4 slots overlap CPU decode, GPU upload, kernel, D2H copyback
-3. **CUDA `extract_bits` kernel** — massively parallel tile thresholding (one thread per block)
-4. **NVDEC hardware decode** (H.264 only) — offloads video decode to dedicated GPU silicon
+## Dependencies
 
-**YouTube workflow:** Encode to H.264 yuv420p (required for NVDEC), upload, download the re-encoded MP4, GPU-decode with `-b gpu`. RS ECC corrects any compression artifacts.
-Actual performance depends on resolution, block size, codec settings, GPU model, and system hardware.
-
----
-
-## Codec Guide
-
-| Codec | Lossless | Encode Speed | GPU Decode | Best For |
-|-------|----------|-------------|-----------|----------|
-| **ffv1** (default) | Yes | Fast | CUDA tiles only | Local archiving, max fidelity |
-| **ffvhuff** | Yes | Fast | CUDA tiles only | Same as ffv1 but 25× larger output |
-| **h264** | Near (CRF 10) | Medium | **NVDEC hardware** | YouTube upload, NVDEC decode |
-| **hevc** | Near (CRF 10) | Very slow | **NVDEC hardware** | Not recommended (encode too slow) |
-
-> **NVDEC requires yuv420p pixel format.** The encoder automatically uses yuv420p output for h264/hevc codecs so NVDEC can hardware-decode them.
-
-
-## Requirements
-
-| Component | Windows | macOS | Linux |
-|-----------|---------|-------|-------|
-| **Compiler** | MSVC or MinGW/GCC | Clang (Xcode CLT) | GCC or Clang |
-| **CMake** | 3.16+ | 3.16+ | 3.16+ |
-| **FFmpeg** | FFmpeg + FFprobe in PATH | FFmpeg + FFprobe in PATH | FFmpeg + FFprobe in PATH |
-| **CUDA GPU** | CUDA Toolkit 12.x + MSVC + Visual Studio | N/A | CUDA Toolkit 12.x + GCC |
-| **NVDEC** | BtbN FFmpeg shared build in `ffmpeg_shared/` | FFmpeg dev (pkg-config) | FFmpeg dev (pkg-config) |
-| **NVENC** | NVIDIA Video Codec SDK (optional) | N/A | NVIDIA Video Codec SDK (optional) |
-
----
+| Component | Version | Required For |
+|---|---|---|
+| CMake | ≥ 3.16 | All builds |
+| C compiler | GCC 10+ / Clang 12+ / MSVC 2019+ | All builds |
+| FFmpeg + FFprobe | ≥ 4.0 (in PATH) | Runtime (CPU pipe) |
+| BtbN FFmpeg shared | Latest (`ffmpeg_shared/`) | Windows NVDEC (libavcodec C API) |
+| pthreads | — | All builds |
+| CUDA Toolkit | 12.x | `USE_CUDA=ON` |
+| JDK | 21+ | `USE_JNI_TILES=ON` |
+| Python | ≥ 3.10 | pytest suite |
+| pytest | ≥ 7.0 | `vidcrypt-java/tests/` |
 
 ## Build
 
-### Auto-detect (recommended)
+### Single command (auto-detect everything)
 
-The build scripts auto-detect your platform, compiler, CUDA availability, and FFmpeg — then build with optimal settings.
-
-**Windows:**
-```batch
-cd builder
-build.bat                  :: auto-detect (CUDA if available, CPU fallback)
-build.bat --gpu            :: force CUDA build (fails if unavailable)
-build.bat --cpu --no-gpu   :: force CPU-only build
-```
-
-**macOS / Linux:**
 ```bash
+# Windows
+cd builder
+build.bat                  # auto-detect: CUDA + Java + AVX2
+build.bat --gpu            # force CUDA GPU
+build.bat --cpu --no-gpu   # CPU only, no CUDA
+build.bat --no-java        # skip Java tile decoder
+
+# Linux / macOS
 cd builder
 ./build.sh                 # auto-detect everything
+./build.sh --no-java       # skip Java tile decoder
 ```
 
-### Manual CMake
+This compiles Java classes → JAR, then C → exe, and copies `vidcrypt-tiles.jar`
+alongside the binaries. The decoder auto-loads the JAR at runtime.
 
-**Windows (CPU, any compiler):**
-```bash
-mkdir build && cd build
-cmake ..
-cmake --build . --config Release
-```
+Output: `build/vidcrypt-encoder`, `build/vidcrypt-decoder`, `build/vidcrypt-tiles.jar`
 
-**Windows (GPU, requires MSVC + CUDA):**
-```bash
-mkdir build_cuda && cd build_cuda
-cmake .. -G "Visual Studio 17 2022" -A x64 -DUSE_CUDA=ON
-cmake --build . --config Release
-```
+### Manual CMake (advanced)
 
-**macOS / Linux (CPU):**
 ```bash
-mkdir build && cd build
-cmake .. -DCMAKE_BUILD_TYPE=Release
-cmake --build . --parallel
-```
+# 1. Build Java JAR first
+cd vidcrypt-java
+javac --enable-preview --release 21 -d out --add-modules jdk.incubator.vector \
+  vidcrypt-core/src/main/java/com/vidcrypt/frame/JniTileDecoder.java \
+  vidcrypt-core/src/main/java/com/vidcrypt/frame/TileDecoder.java \
+  vidcrypt-core/src/main/java/com/vidcrypt/frame/DecodeGeometry.java \
+  vidcrypt-core/src/main/java/com/vidcrypt/calibration/CalParams.java \
+  vidcrypt-core/src/main/java/com/vidcrypt/hash/Crc16.java
+jar cf ../vidcrypt-tiles.jar -C out .
+cd ..
 
-**Linux (GPU):**
-```bash
-mkdir build_cuda && cd build_cuda
-cmake .. -DCMAKE_BUILD_TYPE=Release -DUSE_CUDA=ON
-cmake --build . --parallel
+# 2. Build C with Java tiles
+cmake -B build -DCMAKE_BUILD_TYPE=Release -DUSE_JNI_TILES=ON
+cmake --build build --parallel
+
+# Or: GPU + Java tiles
+cmake -B build -DCMAKE_BUILD_TYPE=Release -DUSE_CUDA=ON -DUSE_JNI_TILES=ON
+cmake --build build --parallel
 ```
 
 ### CMake Options
 
 | Option | Default | Description |
-| ------ | ------- | ----------- |
-| `USE_CUDA` | `OFF` | Enable CUDA GPU acceleration |
-| `ENABLE_AVX2` | `ON` | Enable AVX2 SIMD for calibration reader |
-| `ENABLE_PROFILING` | `OFF` | Enable per-stage profiling instrumentation |
-| `ENABLE_LOGGING` | `OFF` | Enable detailed session logging to `log/` |
----
+|---|---|---|
+| `USE_CUDA` | OFF | CUDA GPU NVDEC + tile kernel |
+| `USE_JNI_TILES` | OFF | Java JNI tile decode (3-4× speedup) |
+| `ENABLE_AVX2` | ON | AVX2 SIMD for calibration reader |
+| `ENABLE_PROFILING` | OFF | Per-stage timing instrumentation |
+| `ENABLE_LOGGING` | OFF | Structured logging to `log/` |
 
 ## Usage
 
-### Encode a File
-
 ```bash
-# Lossless (fastest encode, best for archiving)
+# Encode (lossless FFV1)
 vidcrypt-encoder -i input.zip -o encoded.mkv
 
-# YouTube-optimized (H.264, NVDEC-compatible)
+# Encode (YouTube H.264, NVDEC-compatible)
 vidcrypt-encoder -i input.zip -o encoded.mkv -c h264
-```
 
-### Decode a Video (CPU)
-
-```bash
+# Decode (CPU C SIMD)
 vidcrypt-decoder -i encoded.mkv
-```
 
-### Decode with GPU Acceleration
+# Decode (GPU NVDEC + Java tiles, auto-loaded)
+vidcrypt-decoder -b gpu -i encoded.mkv
+
+CLI flags: `-b cpu|gpu|auto` (backend), `-J <path>` (Java classpath, JNI tiles), `-j <n>` (worker threads), `-o <dir>` (output dir).
+
+## Tests
 
 ```bash
-vidcrypt-decoder -b gpu -i encoded.mkv
+# C tests
+cd build && ctest --output-on-failure && cd ..
+
+# Python tests (Java module)
+cd vidcrypt-java && python -m pytest tests/ -v && cd ..
 ```
 
-The `-b` / `--backend` flag accepts:
-* `cpu` — Force CPU-only decode
-* `gpu` — Force GPU-accelerated decode (fails if unavailable)
-* `auto` — Auto-detect GPU, fall back to CPU
+## Debug Trace
 
-Additional options:
-* `-o <dir>` — Output directory (default: current dir)
-* `-j <n>` — Worker threads for CPU RS decode (default: 4)
+**`tile_decode_grid` execution path:**
+1. `decoder_decode_file` (`decoder.c:214`) calls `tile_decode_grid` (`simd_decode.c:224`)
+2. If `USE_JNI_TILES` defined and JNI available → `tile_decode_grid_jni` (`tile_decode_jni.c`)
+   → JNI → `JniTileDecoder.tileDecodeGrid` → `TileDecoder.decodeGrid` (Java)
+3. Fallback → C `tile_validate_sync` + `count_white_block8` (`simd_decode.c:89`)
 
-The decoder automatically restores the original filename and verifies the recovered file before writing it to disk.
+**RS encode path:**
+`encoder_encode_file` (`encoder.c:147`) → loop → `rs_encode` (`reedsolomon.c:72`)
+→ LFSR remainder in `bb[]` → write ECC symbols to `encoded[k+i]`
 
----
+**Frame layout:**
+`calibration.h` constants → `calibration.c:build_calibration_bytes` (24 bytes)
+→ `framegen.c:precomputed_frame_init` (pre-renders cal bar + sync + corners)
+→ `framegen.c:precomputed_frame_generate` → `tile_expand_bits` (payload)
 
-## Repository Structure
-
-```text
-.
-├── src/                  Core encoder and decoder implementation
-│   ├── backend.c/h       Backend mode selection (cpu/gpu/auto)
-│   ├── decoder.c/h       Main decoder with async GPU pipeline
-│   ├── encoder.c/h       Main encoder
-│   ├── libav_decoder.c/h Direct libavcodec C API frame reader (GPU path)
-│   ├── ffmpeg_pipe.c/h   FFmpeg CLI pipe frame reader (CPU path)
-│   ├── gpu_backend.c/h   CUDA GPU backend lifecycle and pipeline
-│   ├── gpu_kernels.cu/.h CUDA kernels (bit extraction, frame gen)
-│   ├── gpu_presets.c/h   GPU architecture presets and auto-detection
-│   ├── gpu_nvenc.c/h     NVENC hardware encoder wrapper
-│   ├── ffmpeg_hwdecoder.c/h NVDEC (obsolete, replaced by libav_decoder)
-│   ├── calibration.c/h   Calibration bar extraction
-│   ├── framedecode.c/h   Frame tile geometry and bit extraction
-│   ├── framegen.c/h      Frame generation (encoder)
-│   ├── reedsolomon.c/h   Reed-Solomon ECC
-│   ├── simd_decode.c/h   SIMD-accelerated tile thresholding
-│   ├── threadpool.c/h    Multi-threaded worker pool
-│   ├── profiling.c/h     Per-stage profiling instrumentation
-│   ├── logutil.c/h       Structured logging utility
-│   ├── sha256.c/h        SHA-256 integrity verification
-│   └── crc16.c/h         CRC-16-CCITT checksum
-├── tests/                Unit tests
-├── docs/                 Documentation
-├── builder/              Build utilities
-├── main_encoder.c
-├── main_decoder.c
-├── CMakeLists.txt
-└── README.md
-```
-
----
-
-## Applications
-
-* Data archival through video
-* Platform-independent file transfer
-* Storage inside video-hosting services
-* Compression-resilient file transport
-* Research into visual data storage systems
-
----
-
-## Status
-
-VIDCRYPT-V8 is an active experimental project focused on maximizing recovery reliability from heavily compressed video while maintaining extremely high throughput.
-
-**Platforms:** Windows (x86-64 + CUDA), macOS (ARM64/x86-64), Linux (x86-64 + CUDA). ARM64 uses a scalar fallback for calibration with full functionality. GPU acceleration is implemented for the **decode path** (2378+ FPS on RTX 5070). GPU encode path with NVENC is under development.
-
----
+**Calibration read:**
+`extract_calibration` (`calibration.c:183`) → `read_calibration_dots` (192 bits)
+→ SSE2/AVX2 (`simd_decode.c:290`) or scalar → `parse_calibration_bytes` (CRC verify)
 
 ## License
 
-Licensed under the GNU General Public License v3.0 (GPL-3.0).
-
-See the [LICENSE](LICENSE) file for details.
+GNU General Public License v3.0. See [LICENSE](LICENSE).
